<resources>
    <string name="app_name">3.2.2 Calculator Pro</string>
    <string name="textViewInputNumbers">0</string>
    <string name="textViewE1">#</string>
    <string name="textViewE2">$</string>
    <string name="textViewE3">^</string>
    <string name="textViewE4">"@"</string>
    <string name="textViewE5">"O"</string>
    <string name="textViewE6">( )</string>
    <string name="textViewE7">V</string>
    <string name="textViewE8">|</string>

    <string name="textViewButton1">1</string>
    <string name="textViewButton2">2</string>
    <string name="textViewButton3">3</string>
    <string name="textViewButton4">4</string>
    <string name="textViewButton5">5</string>
    <string name="textViewButton6">6</string>
    <string name="textViewButton7">7</string>
    <string name="textViewButton8">8</string>
    <string name="textViewButton9">9</string>
    <string name="textViewButton0">0</string>
    <string name="textViewButtonDot">.</string>
    <string name="textViewButtonChange">E</string>
    <string name="textViewButtonC">C</string>
    <string name="textViewButtonPlusMinus">+/-</string>
    <string name="textViewButtonPercent">%</string>

    <string name="textViewButtonDivision">/</string>
    <string name="textViewButtonMulti">X</string>
    <string name="textViewButtonMinus">-</string>
    <string name="textViewButtonPlus">+</string>
    <string name="textViewButtonEqual">=</string>

</resources>
